# machine-learning-python

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  genindex.html  imlp_1_data.ipynb  imlp_2_modeling.ipynb  imlp_3_experiments.ipynb  imlp_4_deep_learning.ipynb  intro.html  objects.inv  pyproject.toml  pyrightconfig.json  requirements.txt  search.html  searchindex.js  setup.html  tox.ini
.github/workflows/: deploy.yml  dev.yml  docs.yml  release.yml
_sources/: intro.md
_sources/imlp/: imlp_3_experiments.ipynb  imlp_4_deep_learning.ipynb
book/: _config.yml  _toc.yml  intro.md  setup.md
book/imlp/: imlp.md  imlp_1_data.ipynb  imlp_3_experiments.ipynb  imlp_4_deep_learning.ipynb
book/imlp/imlp1_images/: decision_random.html  decision_smote.html
book/imlp/imlp3_files/: zs_null_false.npy
book/timeseries_presentation/: TimeSeriesAnomalyDetection2.ipynb  timeseries_presentation.md
imlp/: imlp_1_data.html  imlp_2_modeling.html  imlp_3_experiments.html  imlp_4_deep_learning.html
imlp3_files/: zs_nh_true.npy
machine_learning_python/: __init__.py  eda.py
machine_learning_python/plotly_theme/: __init__.py  _mlp_plotly_theme.py
tests/: __init__.py  test_machine_learning_python.py
timeseries/: anomaly_detection.html
timeseries_presentation/: TimeSeriesAnomalyDetection2.html
