[tool]
[tool.poetry]
name = "machine-learning-python"
version = "0.1.0"
homepage = "https://github.com/ondraz/machine-learning-python"
description = "Machine Learning in Python Course."
authors = ["Ondra Zahradnik <ondra.zahradnik@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "machine_learning_python" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"

black  = { version = "20.8b1", optional = true}
isort  = { version = "5.6.4", optional = true}
flake8  = { version = "3.8.4", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^6.2.5", optional = true}
pytest-cov  = { version = "2.10.1", optional = true}
tox  = { version = "^3.20.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}
twine  = { version = "^3.3.0", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}

scikit-learn = "^1.0"
scipy = "^1.7.3"
pandas = "^1.3.1"
jupyter-book = "^0.11.3"
plotly = "^5.3.1"
kaleido = "0.2.1"
seaborn = "^0.11.2"

[tool.poetry.extras]
development = [
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest",
    "pytest-cov",
    "tox",
    "virtualenv",
    "pip",
    "twine",
    "pre-commit",
    "toml"
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | book
)/
'''
